--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: optional:file:backend/env.properties
+    import: optional:file:env.properties
   datasource:
     url: jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
