--- a/vue/package.json
+++ b/vue/package.json
@@ -17,12 +17,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.11.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
     "three": "^0.175.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-select": "^4.0.0-beta.6",
+    "vue3-google-signin": "^2.1.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
