--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -16,5 +16,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${ISSUER_URI}
+  jackson:
+    serialization.FAIL_ON_EMPTY_BEANS: false
 frontend:
   url: ${FRONTEND_URL}
